# JobPilot

./: .gitignore  README.md
backend/: main.py  requirements.txt  run.sh
backend/agents/resume_pilot/: .gitignore  README.md  extracted_pdf_data.json  github_analysis.json  pyproject.toml  resume_got_off.json  skill_verification.json  test.py
backend/agents/resume_pilot/src/resume_parser/: crew.py  main.py  utils.py
backend/agents/resume_pilot/src/resume_parser/config/: agents.yaml  settings.py  tasks.yaml
backend/agents/resume_pilot/src/resume_parser/db/: client.py  db_main.py  tables.py
backend/agents/resume_pilot/src/resume_parser/db/repositories/: candidate_experience_repo.py  candidate_links_repo.py  candidate_repo.py  skills_repo.py
backend/agents/resume_pilot/src/resume_parser/github_tools/: github_append.py
backend/agents/resume_pilot/src/resume_parser/skill_tools/: skill_utils.py
backend/agents/resume_pilot/src/resume_parser/tools/: Pdf_tool.py
backend/agents/resume_pilot/src/resume_parser/verification_tools/: verify_skills_tool.py
backend/agents/sql_pilot/: .env.example  README.md  input.txt  output.txt  pyproject.toml  test.py
backend/agents/sql_pilot/knowledge/: tech.txt  technology.json
backend/agents/sql_pilot/listeners/: my_custom_listener.py
backend/agents/sql_pilot/src/sql_pilot/: crew.py  main.py
backend/agents/sql_pilot/src/sql_pilot/config/: agents.yaml  tasks.yaml
backend/agents/sql_pilot/src/sql_pilot/listeners/: __init__.py
backend/agents/sql_pilot/src/sql_pilot/tools/: custom_tool.py  supabase_tools.py
frontend/: index.html  package-lock.json  package.json  (+1 more)
(+34 files in other folders)
