[project]
name = "resume_parser"
version = "0.1.0"
description = "resume_parser using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai",
    "crewai[tools]>=0.201.1,<1.0.0",
    "PyPDF2",
    "google",
    "google-generativeai",
    "ollama",
    "PyGithub",
    "PyMuPDF",
    "groq",
    "langchain_groq",
    "tools",
    "sentence-transformers",
    "scikit-learn",
    "spacy",
    "huggingface-hub",
    "numpy",
    "supabase"
]

[project.scripts]
resume_parser = "resume_parser.main:run"
run_crew = "resume_parser.main:run"
train = "resume_parser.main:train"
replay = "resume_parser.main:replay"
test = "resume_parser.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
